# genexpr

./: .ghci  .gitignore  README.md  expr-gen.cabal  package.yaml  stack.yaml
a-la-carte/: README.md  a-la-carte.cabal  package.yaml  stack.yaml
a-la-carte/app/: Main.hs
a-la-carte/src/: AlaCarte.hs
booklet-page-calc/: .gitignore  package.yaml
booklet-page-calc/src/: Lib.hs  Main.hs
config-file/: app.yml
existentials-antipattern/: package.yaml
existentials-antipattern/src/: Widget.hs
expr-gen/: README.md  package.yaml  stack.yaml
expr-gen/exe/: Main.hs
expr-gen/src/: Gen.hs  Print.hs
free-transactions/: README.md  free-transactions.cabal
free-transactions/app/: Main.hs
free-transactions/src/: DbSimple.hs  ExceptE.hs  FME.hs  Lib.hs  Model.hs  TFM.hs  Test.hs
haskell/a-la-carte/: README.md  package.yaml
haskell/booklet-page-calc/: .ghci  package.yaml
haskell/config-file/: .gitignore  package.yaml
haskell/expr-gen/: .ghci  expr-gen.cabal
haskell/free-transactions/: README.md  free-transactions.cabal  stack.yaml
haskell/problem-set/: dijkstra.txt  package.yaml
haskell/profile-demo/: package.yaml
haskell/stt-demo/: .gitignore  ChangeLog.md  README.md  package.yaml  stack.yaml
problem-set/: .ghci  README.md  dijkstra.txt  docs-1005.txt  package.yaml
problem-set/src/: Main.hs
profile-demo/: README.md  package.yaml  teh-main.prof
profile-demo/src/: Main.hs
rust/: test-script.rs
rust/binary-search/: README.md
rust/cactusref-test/: Cargo.toml  README.md
rust/problem-2/: Cargo.toml  README.md
rust/problem-set/: Cargo.toml
rust/problem-set/src/: binary_tree.rs  main.rs  tree.txt
rust/romio-test-1/: Cargo.toml
rust/shunting-yard/: Cargo.toml  README.md
scala/case-builder/: README.md  build.sbt
scala/free-monads-surrogate/: README.md  build.sbt
scala/type-safe-builders/: README.md  pom.xml
small-problems/: package.yaml  stack.yaml
sokoban/: package.yaml  stack.yaml
src/: Check.hs  Expr.hs  Gen.hs  Opt.hs  Print.hs  Run.hs
test/: MainSpec.hs  Spec.hs  pp-cases.txt
(+45 files in other folders)
