name:                free-transactions
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/nlinker/playground-haskell/free-transactions
license:             BSD3
license-file:        LICENSE
author:              Nick Linker
maintainer:          nlinker@gmail.com
copyright:           2017 Nick Linker
category:            Console
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , free
  default-language:    Haskell2010

executable free-transactions-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , free-transactions
  default-language:    Haskell2010

test-suite free-transactions-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , free-transactions
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/nlinker/playground-haskell/free-transactions
